explain cosine similarity

--- a/query.ipynb
+++ b/query.ipynb
@@ -96,6 +96,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "First of all, let's explain why `np.dot` is used to calculate the similarity between two images.\n",
+    "\n",
+    "The VGG16 model will output a vector for each image, which we call the feature vector. We can determine the similarity between two images by calculating the angle between the two vectors. The smaller the angle, the more similar the two images are.\n",
+    "\n",
+    "One of the ways to calculate the angle between two vectors is to use the cosine similarity. The cosine similarity is calculated by the following formula:\n",
+    "$$ similarity = \\cos(\\theta) = {{A \\cdot B}\\over{\\begin{Vmatrix}{A}\\end{Vmatrix} \\begin{Vmatrix}{B}\\end{Vmatrix}}} $$\n",
+    "where $A$ and $B$ are two vectors, and $\\theta$ is the angle between them.\n",
+    "\n",
+    "Since we have already normalized the feature in `model.py` by `feature = feature / np.linalg.norm(feature)`, it is equivalent to $\\begin{Vmatrix}{A}\\end{Vmatrix} = \\begin{Vmatrix}{B}\\end{Vmatrix} = 1$. And make the formula above become:\n",
+    "$$ similarity = \\cos(\\theta) = {A\\over{\\begin{Vmatrix}{A}\\end{Vmatrix}}} \\cdot {B\\over{\\begin{Vmatrix}{B}\\end{Vmatrix}}} $$\n",
+    "\n",
+    "Therefore, the cosine similarity can be calculated by the following formula:\n",
+    "$$ similarity = \\cos(\\theta) = A \\cdot B $$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Querying without any modification"
    ]
   },
