update the explain of cosine similarity

--- a/query.ipynb
+++ b/query.ipynb
@@ -107,7 +107,7 @@
     "Since we have already normalized the feature in `model.py` by `feature = feature / np.linalg.norm(feature)`, it is equivalent to $\\begin{Vmatrix}{A}\\end{Vmatrix} = \\begin{Vmatrix}{B}\\end{Vmatrix} = 1$. And make the formula above become:\n",
     "$$ similarity = \\cos(\\theta) = {A\\over{\\begin{Vmatrix}{A}\\end{Vmatrix}}} \\cdot {B\\over{\\begin{Vmatrix}{B}\\end{Vmatrix}}} $$\n",
     "\n",
-    "Therefore, the cosine similarity can be calculated by the following formula:\n",
+    "Therefore, cause the norm of the feature vector becomes 1, the cosine similarity can be calculated by the dot product of two vectors:\n",
     "$$ similarity = \\cos(\\theta) = A \\cdot B $$"
    ]
   },
