update the dataset used

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Image Reserve Engine based on VGG16\n",
-    "The dataset is Tiny-ImageNet-200 from [Stanford University](http://cs231n.stanford.edu/tiny-imagenet-200.zip)"
+    "The dataset is Tiny-ImageNet-200 from [Stanford University CS231n](http://cs231n.stanford.edu/tiny-imagenet-200.zip)"
    ]
   },
   {
