--- a/query.ipynb
+++ b/query.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get a image to test without any modification"
+    "#### Get an image to test without any modification"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get a image to test randomly with Gaussian noise"
+    "#### Get an image to test randomly with Gaussian noise"
    ]
   },
   {
